SLVSCODE-710 Try to get correct encoding for taint locations